Fix center alignment of header.

--- a/src/App.css
+++ b/src/App.css
@@ -34,7 +34,6 @@
 }
 
 .header{
-  width: 90%;
   text-align: center;
   margin-top: 150px;
   margin-bottom: 150px;
